--- a/‫‪frontend‬‬/package.json
+++ b/‫‪frontend‬‬/package.json
@@ -11,10 +11,14 @@
   "dependencies": {
     "@chakra-ui/react": "^3.2.3",
     "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "framer-motion": "^11.14.4",
     "next": "15.1.0",
+    "next-themes": "^0.4.4",
     "octokit": "^4.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.1",
     "react-icons": "^5.4.0"
   },
   "devDependencies": {
